[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pybase64 = "^1.4.2"
paramiko = "4.0.0"
google-cloud-storage = "^2.19.0"
google-cloud-pubsub = "^2.31.1"
google-cloud-logging = "^3.12.1"
python-dotenv = "^1.1.1"
dacite = "^1.9.2"
redo = "^3.0.0"
notifications-python-client = "^10.0.1"
requests = "^2.32.5"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
boto3 = "^1.40.27"
isort = "^5.8.0"
flake8 = "^7.3.0"
flake8-cognitive-complexity = "^0.1.0"
black = "^25.1.0"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
behave = "1.2.6"
requests-mock = "^1.12.1"

[tool.isort]
line_length = 200
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
