[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pybase64 = "^1.4.2"
paramiko = "^4.0.0"
google-cloud-storage = "^3.6.0"
google-cloud-pubsub = "^2.33.0"
google-cloud-logging = "^3.12.1"
dacite = "^1.9.2"
redo = "^3.0.0"
notifications-python-client = "^10.0.1"
requests = "^2.32.5"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
boto3 = "^1.42.4"
isort = "^7.0.0"
flake8 = "^7.3.0"
flake8-cognitive-complexity = "^0.1.0"
black = "^25.11.0"
mypy = "^1.19.0"
pytest-cov = "^7.0.0"
behave = "1.2.6"
requests-mock = "^1.12.1"
deptry = "^0.24.0"
vulture = "^2.14"

[tool.isort]
line_length = 200
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
