[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pybase64 = "^1.4.3"
paramiko = "^4.0.0"
google-cloud-storage = "^3.10.1"
google-cloud-pubsub = "^2.37.0"
google-cloud-logging = "^3.15.0"
dacite = "^1.9.2"
redo = "^3.0.0"
notifications-python-client = "^10.0.1"
requests = "^2.33.1"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
flask = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
boto3 = "^1.42.97"
isort = "^7.0.0"
flake8 = "^7.3.0"
flake8-cognitive-complexity = "^0.1.0"
black = "^26.3.1"
mypy = "^1.20.2"
pytest-cov = "^7.1.0"
behave = "1.2.6"
requests-mock = "^1.12.1"
deptry = "^0.24.0"
vulture = "^2.16"

[tool.isort]
line_length = 200
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
